# gittest1

./: CMakeLists.txt  README.md
include/: AllocationTracker.h  SimpleArray.h
src/: AllocationTracker.cpp  SimpleArray.cpp
tests/: main.cpp  moreTests.cpp  simpleArrayTest.cpp
